fixes viewport height on mobile devices

--- a/Day_2_Contact_Form/style.css
+++ b/Day_2_Contact_Form/style.css
@@ -1,30 +1,24 @@
-body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column nowrap;
-    background-color: #222;
-    box-sizing: border-box;
+* {
     margin: 0;
     padding: 0;
 }
 
-#container {
-    width: 37.5em;
-    height: 37.5em;
+body {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    background-color: #3D405B;
-    border-radius: 2em;
+    background-color: #111214;
+    box-sizing: border-box;
 }
 
 #title {
     font-family: Avenir, sans-serif;
     font-size: 2em;
     color: #fff;
+    margin-bottom: 1em;
 }
 
 #form {
@@ -34,54 +28,42 @@ body {
 
 form > * {
     font-family: Avenir, sans-serif;
-    font-size: 0.8em;
+    font-size: 1em;
     color: #fff;
-    background-color: #3D405B;
-    margin: 0.5em;
+    background-color: inherit;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 1em;
+    padding: 0.4em;
+    outline: none;
 }
 
 .input {
-    border: 0.1em solid #fff;
-    border-radius: 0.7em;
-}
-
-#button:hover {
-    cursor: pointer;
-    background-color: #35395c;
+    border-bottom: 0.2em solid #fff;
 }
 
 #vaildationMessage {
     display: none;
     color: #E07A5F;
+    text-align: center;
+}
+
+#textarea {
+    border: 0.1em solid #fff;
+}
+
+#button {
+    border: 0.1em solid #fff
+}
+
+#button:hover {
+    cursor: pointer;
+    box-shadow: 0 0 0.5em #fff;
 }
 
 #successMessage {
     font-family: Avenir, sans-serif;
-    font-size: 1.5em;
+    font-size: 1em;
     color: #fff;
     display: none;
-}
-
-/* media query smartphone */
-@media screen and (max-width: 767px) {
-    body {
-        width: 100vw;
-        height: 100vh;
-        background-color: #222;
-    }
-
-    #container {
-        width: 100vw;
-        height: 100vh;
-        border-radius: 0;
-        background-color: #222;
-    }
-
-    form > * {
-        background-color: #222;
-    }
-
-    #successMessage {
-        font-size: 1em;
-    }
 }
